kubernetes-ingress/006-ingress-with-external-dns-and-path-base-routing/alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-external-dns
  labels:
    app: app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb" 
    alb.ingress.kubernetes.io/load-balancer-name: external-dns-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    # Heath check settings
    # alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port  
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # SSH settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:410052665018:certificate/d6cf6240-9d5c-409b-9686-458b20c54497
    # SSL Redirect Setting (http to https) all http will be redirected to https
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External dns settings
    external-dns.alpha.kubernetes.io/hostname: app.tclovis.com, stg.tclovis.com

spec:
    rules:
      - http:
          paths:
            - path: /covid19
              pathType: Prefix
              backend:
                service:
                  name: covid19-nodeport-service
                  port:
                    number: 80  
            - path: /halloween
              pathType: Prefix
              backend:
                service:
                  name: halloween-nodeport-service
                  port:
                    number: 80
            - path: /phone
              pathType: Prefix
              backend:
                service:
                  name: phone-nodeport-service
                  port:
                    number: 80
            - path: /static
              pathType: Prefix
              backend:
                service:
                  name: static-nodeport-service
                  port:
                    number: 80
            - path: /website
              pathType: Prefix
              backend:
                service:
                  name: website-nodeport-service
                  port:
                    number: 80
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: articles-nodeport-service
                  port:
                    number: 80
